--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,33 @@
-.DS_Store
-Makefile
+!Build/
 *.bak
+*.bbproj
+*.bs
+*.o
 *.old
-blib
-pm_to_blib
-_build/
+*.rej
+*.tar
+*.tar.gz
+*.tgz
+*.zip
+.DS_Store
+.last_cover_stats
+.prove
+/.build/
+/MANIFEST.bak
+/META.*
+/MYMETA.*
+/Makefile
+/Makefile.old
+/blib/
+/pm_to_blib
+Build
+Build.bat
 MYMETA*
+Makefile
 PeGS-*
+_build/
+blib
+cover_db/
+inc/
+nytprof.out
+pm_to_blib
